--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.2.3
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 numpy==2.3.0
+packaging==25.0
 pandas==2.3.0
 pillow==11.2.1
 python-dateutil==2.9.0.post0
