--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,17 @@
 services:
   - type: web
-    name: serveease-app
-    runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn "app:create_app()"
-    autoDeploy: true
-    buildFilter:
-      paths:
-        - ./*
-    plan: free
-    postDeploy:
-      - flask db upgrade
+    name: serveease
+    env: python
+    buildCommand: |
+      pip install -r requirements.txt
+    startCommand: |
+      flask db upgrade && gunicorn app:app
+    envVars:
+      - key: FLASK_APP
+        value: app
+      - key: FLASK_ENV
+        value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: your-database-name
+          property: connectionString
